--- a/css/theme/simple.css
+++ b/css/theme/simple.css
@@ -53,7 +53,9 @@ body {
   font-size: 2.0em; }
 
 .reveal h2 {
-  font-size: 1.6em; }
+  font-size: 1.6em;
+  margin: -140px 0px 60px 0px; }
+ }
 
 .reveal h3 {
   font-size: 1.2em; }
